crates/scrap_parser/tests/snapshots/snapshots__module_def.snap
---
source: crates/scrap_parser/tests/snapshots.rs
expression: "$crate :: strip_salsa_ids(& format! (\"{:#?}\", parse(db, source)))"
---
Can(
    Can {
        id: NodeId {
            id: 0,
            file_hash: 16101345102062212073,
        },
        name: ModuleId {
            path: PathKey {
                path: Path {
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                    segments: [
                        PathSegment {
                            ident: Ident {
                                id: NodeId {
                                    id: -2,
                                    file_hash: 0,
                                },
                                name: Symbol {
                                    text: "test",
                                },
                                span: Span {
                                    start: 0,
                                    end: 4,
                                },
                            },
                            id: NodeId {
                                id: -2,
                                file_hash: 0,
                            },
                        },
                    ],
                },
            },
        },
        items: [
            Item {
                kind: Module(
                    Module {
                        id: ModuleId {
                            path: PathKey {
                                path: Path {
                                    span: Span {
                                        start: 0,
                                        end: 9,
                                    },
                                    segments: [
                                        PathSegment {
                                            ident: Ident {
                                                id: NodeId {
                                                    id: -2,
                                                    file_hash: 0,
                                                },
                                                name: Symbol {
                                                    text: "test",
                                                },
                                                span: Span {
                                                    start: 0,
                                                    end: 4,
                                                },
                                            },
                                            id: NodeId {
                                                id: -2,
                                                file_hash: 0,
                                            },
                                        },
                                        PathSegment {
                                            ident: Ident {
                                                id: NodeId {
                                                    id: 1,
                                                    file_hash: 16101345102062212073,
                                                },
                                                name: Symbol {
                                                    text: "inner",
                                                },
                                                span: Span {
                                                    start: 4,
                                                    end: 9,
                                                },
                                            },
                                            id: NodeId {
                                                id: 1,
                                                file_hash: 16101345102062212073,
                                            },
                                        },
                                    ],
                                },
                            },
                        },
                        kind: Loaded(
                            [
                                Item {
                                    kind: Fn(
                                        FnDef {
                                            id: NodeId {
                                                id: 11,
                                                file_hash: 16101345102062212073,
                                            },
                                            ident: Ident {
                                                id: NodeId {
                                                    id: 2,
                                                    file_hash: 16101345102062212073,
                                                },
                                                name: Symbol {
                                                    text: "helper",
                                                },
                                                span: Span {
                                                    start: 19,
                                                    end: 25,
                                                },
                                            },
                                            generics: Generics {
                                                params: [],
                                            },
                                            args: [],
                                            ret_type: None,
                                            body: Block {
                                                stmts: [
                                                    Stmt {
                                                        id: NodeId {
                                                            id: 9,
                                                            file_hash: 16101345102062212073,
                                                        },
                                                        kind: Semi(
                                                            Expr {
                                                                id: NodeId {
                                                                    id: 8,
                                                                    file_hash: 16101345102062212073,
                                                                },
                                                                kind: Call(
                                                                    Expr {
                                                                        id: NodeId {
                                                                            id: 7,
                                                                            file_hash: 16101345102062212073,
                                                                        },
                                                                        kind: Path(
                                                                            Path {
                                                                                span: Span {
                                                                                    start: 38,
                                                                                    end: 43,
                                                                                },
                                                                                segments: [
                                                                                    PathSegment {
                                                                                        ident: Ident {
                                                                                            id: NodeId {
                                                                                                id: 3,
                                                                                                file_hash: 16101345102062212073,
                                                                                            },
                                                                                            name: Symbol {
                                                                                                text: "print",
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 38,
                                                                                                end: 43,
                                                                                            },
                                                                                        },
                                                                                        id: NodeId {
                                                                                            id: 4,
                                                                                            file_hash: 16101345102062212073,
                                                                                        },
                                                                                    },
                                                                                ],
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 38,
                                                                            end: 43,
                                                                        },
                                                                    },
                                                                    [
                                                                        Expr {
                                                                            id: NodeId {
                                                                                id: 6,
                                                                                file_hash: 16101345102062212073,
                                                                            },
                                                                            kind: Lit(
                                                                                Lit {
                                                                                    id: NodeId {
                                                                                        id: 5,
                                                                                        file_hash: 16101345102062212073,
                                                                                    },
                                                                                    kind: Str,
                                                                                    span: Span {
                                                                                        start: 44,
                                                                                        end: 51,
                                                                                    },
                                                                                },
                                                                            ),
                                                                            span: Span {
                                                                                start: 44,
                                                                                end: 52,
                                                                            },
                                                                        },
                                                                    ],
                                                                ),
                                                                span: Span {
                                                                    start: 38,
                                                                    end: 53,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 38,
                                                            end: 53,
                                                        },
                                                    },
                                                ],
                                                id: NodeId {
                                                    id: 10,
                                                    file_hash: 16101345102062212073,
                                                },
                                                span: Span {
                                                    start: 28,
                                                    end: 59,
                                                },
                                            },
                                            span: Span {
                                                start: 16,
                                                end: 59,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 16,
                                        end: 61,
                                    },
                                    id: NodeId {
                                        id: 12,
                                        file_hash: 16101345102062212073,
                                    },
                                    vis: Visibility {
                                        kind: Inherited,
                                        span: Span {
                                            start: 16,
                                            end: 18,
                                        },
                                    },
                                },
                            ],
                            Yes,
                            Span {
                                start: 0,
                                end: 61,
                            },
                        ),
                    },
                ),
                span: Span {
                    start: 0,
                    end: 61,
                },
                id: NodeId {
                    id: 13,
                    file_hash: 16101345102062212073,
                },
                vis: Visibility {
                    kind: Inherited,
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
            },
        ],
    },
)
