crates/scrap_parser/tests/snapshots/snapshots__simple_function.snap
---
source: crates/scrap_parser/tests/snapshots.rs
expression: "$crate :: strip_salsa_ids(& format! (\"{:#?}\", parse(db, source)))"
---
Can(
    Can {
        id: NodeId {
            id: 0,
            file_hash: 16101345102062212073,
        },
        name: ModuleId {
            path: PathKey {
                path: Path {
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                    segments: [
                        PathSegment {
                            ident: Ident {
                                id: NodeId {
                                    id: -2,
                                    file_hash: 0,
                                },
                                name: Symbol("test"),
                                span: Span {
                                    start: 0,
                                    end: 4,
                                },
                            },
                            id: NodeId {
                                id: -2,
                                file_hash: 0,
                            },
                        },
                    ],
                },
            },
        },
        items: [
            Item {
                kind: Fn(
                    FnDef {
                        id: NodeId {
                            id: 9,
                            file_hash: 16101345102062212073,
                        },
                        ident: Ident {
                            id: NodeId {
                                id: 1,
                                file_hash: 16101345102062212073,
                            },
                            name: Symbol("main"),
                            span: Span {
                                start: 3,
                                end: 7,
                            },
                        },
                        generics: Generics {
                            params: [],
                        },
                        args: [],
                        ret_type: None,
                        body: Block {
                            stmts: [
                                Stmt {
                                    id: NodeId {
                                        id: 7,
                                        file_hash: 16101345102062212073,
                                    },
                                    kind: Let(
                                        Local {
                                            id: NodeId {
                                                id: 6,
                                                file_hash: 16101345102062212073,
                                            },
                                            pat: Pat {
                                                id: NodeId {
                                                    id: 3,
                                                    file_hash: 16101345102062212073,
                                                },
                                                kind: Ident(
                                                    BindingMode(
                                                        No,
                                                        Not,
                                                    ),
                                                    Ident {
                                                        id: NodeId {
                                                            id: 2,
                                                            file_hash: 16101345102062212073,
                                                        },
                                                        name: Symbol("x"),
                                                        span: Span {
                                                            start: 20,
                                                            end: 21,
                                                        },
                                                    },
                                                    None,
                                                ),
                                                span: Span {
                                                    start: 22,
                                                    end: 23,
                                                },
                                            },
                                            ty: None,
                                            kind: Init(
                                                Expr {
                                                    id: NodeId {
                                                        id: 5,
                                                        file_hash: 16101345102062212073,
                                                    },
                                                    kind: Lit(
                                                        Lit {
                                                            id: NodeId {
                                                                id: 4,
                                                                file_hash: 16101345102062212073,
                                                            },
                                                            kind: Integer,
                                                            span: Span {
                                                                start: 24,
                                                                end: 26,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 24,
                                                        end: 27,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 16,
                                                end: 27,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 16,
                                        end: 27,
                                    },
                                },
                            ],
                            id: NodeId {
                                id: 8,
                                file_hash: 16101345102062212073,
                            },
                            span: Span {
                                start: 10,
                                end: 29,
                            },
                        },
                        span: Span {
                            start: 0,
                            end: 29,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 29,
                },
                id: NodeId {
                    id: 10,
                    file_hash: 16101345102062212073,
                },
                vis: Visibility {
                    kind: Inherited,
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
            },
        ],
    },
)
